--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-streamlit==1.39.0
-openai==1.56.0
-python-dotenv==1.0.1
-pandas==2.2.3
-pdfplumber==0.11.4
-openpyxl==3.1.5
-httpx==0.27.2
+streamlit
+openai
+python-dotenv
+pandas
