--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,12 +1,14 @@
-"icons": [
-  {
-    "src": "/static/icons/vertex_logo.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  },
-  {
-    "src": "/static/icons/vertex_logo.png",
-    "sizes": "512x512",
-    "type": "image/png"
-  }
-]
+{
+  "name": "VERTEX - Assistant Logistique",
+  "short_name": "VERTEX",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#DDEDFC",
+  "theme_color": "#004B8D",
+  "icons": [
+    { "src": "/static/icons/icon-192.PNG", "sizes": "192x192", "type": "image/png" },
+    { "src": "/static/icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
+  ]
+}
+
+
